fixed feed overlap

--- a/react-app/src/components/css/feed.css
+++ b/react-app/src/components/css/feed.css
@@ -94,6 +94,7 @@ img.post {
     display: flex;
     flex-direction: column;
     height: fit-content;
+    z-index: -1;
 }
 
 
